--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
+    "youtube-transcript": "^1.2.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
