--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.34.1",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.569.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -25,6 +25,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-player": "^3.4.0",
+    "react-youtube": "^10.1.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
