--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@stripe/stripe-js": "^8.8.0",
     "@supabase/ssr": "^0.8.0",
